module/network/aws_vpce.tf
resource "aws_vpc_endpoint" "ecr_api" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ecr.api"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ecr-api"
  }
}

resource "aws_vpc_endpoint" "ecr_dkr" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ecr.dkr"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ecr-dkr"
  }
}

resource "aws_vpc_endpoint" "logs" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.logs"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-logs"
  }
}

resource "aws_vpc_endpoint" "ssm" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ssm"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ssm"
  }
}

resource "aws_vpc_endpoint" "ec2" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ec2"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ec2"
  }
}

resource "aws_vpc_endpoint" "ec2messages" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ec2messages"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ec2messages"
  }
}

resource "aws_vpc_endpoint" "ssmmessages" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.ssmmessages"
  vpc_endpoint_type = "Interface"
  subnet_ids        = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  security_group_ids = [
    aws_security_group.vpce_sg.id
  ]

  private_dns_enabled = true

  tags = {
    Name = "${var.project}-endpoint-ssmmessages"
  }
}

resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.vpc.id
  service_name      = "com.amazonaws.ap-northeast-1.s3"
  vpc_endpoint_type = "Gateway"

  tags = {
    Name = "${var.project}-endpoint-s3"
  }
}

resource "aws_vpc_endpoint_route_table_association" "endpoint_association" {
  route_table_id  = aws_route_table.private_route_table.id
  vpc_endpoint_id = aws_vpc_endpoint.s3.id
}
